--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body {
 
 .topnav a {
   float: left;
-  display: block;
+  display:none;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
@@ -49,7 +49,7 @@ body {
 }
 
 @media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
+  .topnav a:not(:first-child) {display: block;}
   .topnav a.icon {
     float: right;
     display: block;
@@ -63,7 +63,7 @@ body {
     right: 0;
     top: 0;
     background-color: yellow;
-    display: block;
+    display:block;
   }
   .topnav.responsive a {
     float: none;
@@ -149,7 +149,7 @@ function myFunction() {
 				    <a href="https://www.linkedin.com/in/anuj-gupta-91a086192"><i class="fa fa-linkedin"></i></a>
 				    <a href="https://mobile.twitter.com/AnujGup33644115"><i class="fa fa-twitter"></i></a>
 				    <a href="#"><i class="fa fa-instagram"></i></a>
-				    <a href="#"><i class="fas fa-envelope"></i></a>
+				    <a href="www.gmail.com"><i class="fas fa-envelope"></i></a>
 				</div>
 			</div>
 		</div>
